Source/WebKit/UIProcess/API/Cocoa/WKWebViewInternal.h
@@ -105,6 +105,7 @@ struct PrintInfo;
 
 - (void)_scheduleVisibleContentRectUpdate;
 
+- (void)_didStartProvisionalLoadForMainFrame;
 - (void)_didFinishLoadForMainFrame;
 - (void)_didFailLoadForMainFrame;
 - (void)_didSameDocumentNavigationForMainFrame:(WebKit::SameDocumentNavigationType)navigationType;
